gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/objc_class2.d
version https://git-lfs.github.com/spec/v1
oid sha256:230b9b9dbb5452c10567d97242dd3c51748506688dbee8d2c79e6d00dfe56b5f
size 359
